ids-spinbox: fix contrast on button in contrast mode + ids-input: fix disabled contrast color (to be consistent w enterprise repo)

--- a/src/ids-spinbox/ids-spinbox.scss
+++ b/src/ids-spinbox/ids-spinbox.scss
@@ -44,6 +44,10 @@
   }
 }
 
+[mode='contrast'] ids-button::part(button) {
+  @include bg-white();
+}
+
 .ids-spinbox.disabled {
   @include text-slate-30();
 
